# pytest-xvirt

./: .gitignore  README.rst  environment.yml  pip-compile.sh  pip-install-all.py  pip-install-all.sh  pyproject.toml  requirements-pypi.txt  requirements.txt  setup.cfg  setup.py
.run/: Python tests in tests.run.xml
src/xvirt/: __init__.py  collectors.py  events.py  events_handler.py  newhooks.py  plugin.py  plugin_remote.py  plugin_server.py
tests/: end2end_support_client.py  end2end_support_server.py  play_socket.py  test_collectors.py  test_end2end.py  test_execute.py  test_newhook_notify.py  test_newhook_setup.py  test_path_rewrite.py  test_skip.py  test_skip_module.py  test_something.py  test_virt_collector.py
