[metadata]
name = pytest-xvirt
url = https://github.com/www-py/pytest-xvirt
version = 0.2.0
license = MIT
description = A pytest plugin to virtualize test. For example to transparently running them on a remote box.
long_description = file: README.rst
long_description_content_type = text/markdown
author = Simone Giacomelli, Fabrizio Lamarca
author_email = simone.giacomelli@gmail.com, lamarca.fabrizio@gmail.com
maintainer = Simone Giacomelli
maintainer_email = simone.giacomelli@gmail.com
keywords = pytest plugin virtualize test remote environment box
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: Pytest
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir = =src
zip_safe = False

# updating to python 3.8 make the tests fail!
python_requires = >=3.7
install_requires =
    pytest>=7.2.2
[options.extras_require]
dev =
    build==0.6.0.post1
    twine==3.4.2
    wheel==0.37.0
pypi =
    twine
[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    xvirt = xvirt.plugin
